--- a/client/manifest.json
+++ b/client/manifest.json
@@ -19,5 +19,11 @@
   },
   "background": {
     "scripts": ["background.js"]
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["index.js"]
+    }
+  ]
 }
